--- a/MyRPG/MyRPG.csproj
+++ b/MyRPG/MyRPG.csproj
@@ -38,7 +38,7 @@
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303" />
   </ItemGroup>
   <ItemGroup>
-    <None Update="Content\GameSettings.xml">
+    <None Update="Content\Bindings.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
