--- a/MyRPG/MyRPG.csproj
+++ b/MyRPG/MyRPG.csproj
@@ -120,4 +120,10 @@
     <Message Text="Restoring dotnet tools" Importance="High" />
     <Exec Command="dotnet tool restore" />
   </Target>
+  <ItemGroup>
+    <EditorConfigFiles Remove="D:\Git\MyRPG\MyRPG\.editorconfig" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="D:\Git\MyRPG\MyRPG\.editorconfig" />
+  </ItemGroup>
 </Project>
